register, login, cookie, bcrypt

--- a/booking-app/api/.env
+++ b/booking-app/api/.env
@@ -1,1 +1,3 @@
 MONGO = mongodb+srv://mbhossain3108:mbhossain3108@cluster0.j255j2s.mongodb.net/booking?retryWrites=true&w=majority
+
+JWT = JM4WUMfXulOjuTUuI3+Gla9kHaKAdtj3ctNNhHDcr10=
